<resources>
    <string name="app_name">汇率计算</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_save_label">Save</string>
    <string name="btn_openOne_label">Config</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>

</resources>
