<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/rmb"
        android:layout_gravity="center"
        android:text="@string/rmb_hint"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/showOut"
        android:textSize="35sp"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_dollar"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dollar_label" />
    <Button
        android:id="@+id/btn_euro"
        android:onClick="onClick"
        android:text="@string/btn_euro_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_won"
        android:onClick="onClick"
        android:text="@string/btn_won_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_openOne"
        android:onClick="openOne"
        android:text="@string/btn_openOne_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>